--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
             <artifactId>easyexcel</artifactId>
             <version>2.2.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
+
 
 
 
